<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        android:gravity="end|center"
        android:hint="@string/tv_result"
        android:textSize="@dimen/tv_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_result"
        app:layout_constraintEnd_toEndOf="@+id/button_clear"
        app:layout_constraintStart_toStartOf="@+id/button_result" />

    <Button
        android:id="@+id/button_7"
        style="@style/Button_calc"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="@id/button_result"
        app:layout_constraintTop_toBottomOf="@+id/button_result" />

    <Button
        android:id="@+id/button_5"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_4"
        style="@style/Button_calc"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_9"
        style="@style/Button_calc_primary"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <Button
        android:id="@+id/button_3"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_size"
        android:text="@string/_0"
        android:textColor="@color/btn_text_black"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_dot"
        android:text="@string/dot"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        tools:ignore="TextContrastCheck"
        style="@style/Button_calc"/>

    <Button
        android:id="@+id/button_2"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_6"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_1"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        tools:ignore="TextContrastCheck"
        style="@style/Button_calc"/>

    <Button
        android:id="@+id/button_8"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_size"
        android:text="@string/clear"
        android:textColor="@color/btn_text_black"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_result" />

    <Button
        android:id="@+id/button_plus"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_minus"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="@+id/button_multi"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_multi"
        android:text="@string/multi"
        app:layout_constraintEnd_toEndOf="@+id/button_div"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus"
        tools:ignore="TextContrastCheck"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_div"
        android:text="@string/div"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_multi"
        tools:ignore="TextContrastCheck"
        style="@style/Button_calc_primary"/>

    <Button
        android:id="@+id/button_result"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_size"
        android:layout_marginTop="360dp"
        android:text="@string/result"
        android:textColor="@color/btn_text_black"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

